--- a/.config/v2ray-config-example.json
+++ b/.config/v2ray-config-example.json
@@ -100,6 +100,7 @@
                 },
                 // ## TcpObject
                 "tcpSettings": {
+                    // ### NoneHeaderObject
                     "header": {
                         "type": "none"
                     }
@@ -110,6 +111,81 @@
                 "dsSettings": {},
                 "quicSettings": {},
                 // ### SockoptObject
+                "sockopt": {
+                    "mark": 0,
+                    "tcpFastOpen": false,
+                    "tproxy": "off"
+                }
+            }
+        },
+        {
+            "protocol": "vmess",
+            "streamSettings": {
+                "network": "tcp",
+                "security": "none",
+                "tlsSettings": {},
+                "tcpSettings": {
+                    // ### HttpHeaderObject
+                    "header": {
+                        "type": "http",
+                        // ### HTTPRequestObject
+                        "request": {
+                            "version": "1.1",
+                            "method": "GET",
+                            "path": [
+                                "/"
+                            ],
+                            "headers": {
+                                "Host": [
+                                    "developer.microsoft.com",
+                                    "developer.apple.com"
+                                ],
+                                "User-Agent": [
+                                    "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36",
+                                    "Mozilla/5.0 (iPhone; CPU iPhone OS 10_0_2 like Mac OS X) AppleWebKit/601.1 (KHTML, like Gecko) CriOS/53.0.2785.109 Mobile/14A456 Safari/601.1.46"
+                                ],
+                                "Accept-Encoding": [
+                                    "gzip, deflate"
+                                ],
+                                "Connection": [
+                                    "keep-alive"
+                                ],
+                                "Pragma": "no-cache"
+                            }
+                        },
+                        // ### HTTPResponseObject
+                        "response": {
+                            "version": "1.1",
+                            "status": "200",
+                            "reason": "OK",
+                            "headers": {
+                                "Content-Type": [
+                                    "text/html",
+                                    "text/css",
+                                    "text/javascript",
+                                    "text/plain",
+                                    "application/octet-stream",
+                                    "audio/mpeg",
+                                    "video/mpeg",
+                                    "video/mp2t",
+                                    "application/x-shockwave-flash"
+                                ],
+                                "Transfer-Encoding": [
+                                    "chunked"
+                                ],
+                                "Connection": [
+                                    "keep-alive"
+                                ],
+                                "Pragma": "no-cache"
+                            }
+                        }
+                    }
+                },
+                "kcpSettings": {},
+                "wsSettings": {},
+                "httpSettings": {},
+                "dsSettings": {},
+                "quicSettings": {},
                 "sockopt": {
                     "mark": 0,
                     "tcpFastOpen": false,
