--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,36 +2,96 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
 
-  <match target="font">
-    <edit name="antialias" mode="assign">
-      <bool>true</bool>
-    </edit>
+	<match target="font">
+		<!-- https://wiki.archlinux.org/index.php/Font_configuration#Anti-aliasing -->
+		<edit name="antialias" mode="assign">
+			<bool>true</bool>
+		</edit>
 
-    <edit name="hinting" mode="assign">
-      <bool>true</bool>
-    </edit>
+		<!-- https://wiki.archlinux.org/index.php/Font_configuration#Byte-Code_Interpreter_(BCI) -->
+		<edit name="hinting" mode="assign">
+			<bool>true</bool>
+		</edit>
 
-    <edit name="autohint" mode="assign">
-      <bool>false</bool>
-    </edit>
+		<!-- https://wiki.archlinux.org/index.php/Font_configuration#Autohinter -->
+		<edit name="autohint" mode="assign">
+			<bool>false</bool>
+		</edit>
 
-    <edit name="hintstyle" mode="assign">
-      <const>hintslight</const>
-    </edit>
-  
-    <edit name="rgba" mode="assign">
-      <const>rgb</const>
-    </edit>
+		<!-- https://wiki.archlinux.org/index.php/Font_configuration#Hintstyle -->
+		<edit name="hintstyle" mode="assign">
+			<const>hintslight</const>
+		</edit>
+		
+		<!-- https://wiki.archlinux.org/index.php/Font_configuration#Pixel_alignment -->
+		<edit name="rgba" mode="assign">
+			<const>rgb</const>
+		</edit>
 
-    <edit name="lcdfilter" mode="assign">
-      <const>lcddefault</const>
-    </edit>
+		<!-- https://wiki.archlinux.org/index.php/Font_configuration#LCD_filter -->
+		<edit name="lcdfilter" mode="assign">
+			<const>lcddefault</const>
+		</edit>
 
-    <edit name="embeddedbitmap" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
+		<!-- https://wiki.archlinux.org/index.php/Font_configuration#Disable_bitmap_fonts -->
+		<edit name="embeddedbitmap" mode="assign">
+			<bool>false</bool>
+		</edit>
+	</match>
 
-  <dir>~/.fonts</dir>
+	<!-- https://wiki.archlinux.org/index.php/Font_configuration/Examples#No_hinting_for_italic_or_bold -->
+	<match target="font">
+		<test name="weight" compare="more"><const>medium</const></test>
+		<edit name="hintstyle" mode="assign"><const>hintnone</const></edit>
+		<edit name="lcdfilter" mode="assign"><const>lcdlight</const></edit>
+	</match>
+
+	<match target="font">
+		<test name="pixelsize" compare="more" qual="any"><double>16</double></test>
+		<edit name="hintstyle" mode="assign"><const>hintnone</const></edit>
+		<edit name="lcdfilter" mode="assign"><const>lcdlight</const></edit>
+	</match>
+
+	<match target="font">
+		<test name="slant" compare="not_eq"><double>0</double></test>
+		<edit name="hintstyle" mode="assign"><const>hintnone</const></edit>
+		<edit name="lcdfilter" mode="assign"><const>lcdlight</const></edit>
+	</match>
+
+
+	<!-- https://wiki.archlinux.org/index.php/Font_configuration/Examples#Default_fonts -->
+
+	<alias>
+		<family>serif</family>
+		<prefer>
+			<family>Source Han Serif SC</family>
+			<family>Noto Serif CJK SC</family>
+			<family>Noto Serif</family>
+		</prefer>
+	</alias>
+
+	<alias>
+		<family>sans-serif</family>
+		<prefer>
+			<family>Sarasa UI SC</family>
+			<family>Source Han Sans CN</family>
+			<family>Noto Sans CJK SC</family>
+			<family>Noto Sans</family>
+		</prefer>
+	</alias>
+
+	<alias>
+		<family>monospace</family>
+		<prefer>
+			<family>Fira Code</family>
+			<family>Sarasa Mono SC</family>
+			<family>Source Han Mono CN</family>
+			<family>Noto Sans Mono CJK SC</family>
+			<family>Noto Sans Mono</family>
+			<family>DejaVu Sans Mono</family>
+		</prefer>
+	</alias>
+
+	<dir>~/.fonts</dir>
 
 </fontconfig>
